# openrelik-worker-plaso

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image-staging.yaml  python-test.yaml  update-uv.yaml
src/: __init__.py  app.py  image_export.py  log2timeline.py  psort.py  utils.py
tests/: test_utils.py
